[package]
name = "bevy_iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
iced_wgpu = { git = "https://github.com/iced-rs/iced", commit = "adce9e04213803bd775538efddf6e7908d1c605e" }
iced_native = { git = "https://github.com/iced-rs/iced", commit = "adce9e04213803bd775538efddf6e7908d1c605e" }
wgpu = "0.12"
