[package]
name = "bevy_iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
crossbeam-channel = "0.5.2"
futures-timer = "3.0.2"
iced_wgpu = { git = "https://github.com/AlisCode/iced", branch = "feat/extract-primitives" }
iced_native = { git = "https://github.com/AlisCode/iced", branch = "feat/extract-primitives" }
surf = "2.3"
wgpu = "0.12"
